# shortener

./: .env.example  .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
config/: settings.py  urls.py
shortener/: models.py  views.py
shortener/forms/: forms.py
shortener/migrations/: 0001_initial.py
shortener/templates/shortener/: index.html
src/scripts/: app.js  copy_url.js
staticfiles/scripts/: app.js
staticfiles/styles/: styles.css
