[tool.poetry]
name = "shortener"
version = "0.1.0"
description = ""
authors = ["Og <breezenest0912@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-heroku = "^0.3.1"
whitenoise = "^6.7.0"
dj-database-url = "^2.2.0"
gunicorn = "^23.0.0"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
setuptools = "^75.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
